# RTS

./: .gitignore  CMakeLists.txt  README.md  rts.c
data/: credits.txt
source/: building.c  building.h  game.c  game.h  interface.c  interface.h  map.c  map.h  unit.c  unit.h
source/tools/: helper.c  helper.h  raymath.h  vector.c  vector.h
